--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: ci-workflow
 on:
   pull_request:
     branches:
-      - main
+      - develop
 jobs: 
   check-application:
     runs-on: ubuntu-latest
